In Sculpt mode brush angle of rotation is broken #58438

Closed
opened 2018-12-01 15:57:29 +01:00 by Erick Tukuniata · 7 comments

System Information
Operating system:Win 7
Graphics card: gtx 550ti

Blender Version
Broken: Blender 2.8 beta about an hour build
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional) Blender 2.79 latest master

Short description of error
In Sculpt mode brush angle of rotation is broken

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  • With the default cube go to sculpt mode
  • Do ctrl+f and move the mouse the widget should show the angle you are rotating your brush.

To see the way it supposes to work, try the same instruction in Blender 2.79

**System Information** Operating system:Win 7 Graphics card: gtx 550ti **Blender Version** Broken: Blender 2.8 beta about an hour build (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) Blender 2.79 latest master **Short description of error** In Sculpt mode brush angle of rotation is broken **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). - With the default cube go to sculpt mode - Do ctrl+f and move the mouse the widget should show the angle you are rotating your brush. To see the way it supposes to work, try the same instruction in Blender 2.79

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Seems like it is actually working behind the scenes (I am getting to correct [rotated] result on the mesh when actually sculpting strokes).
But the UI isnt updating the texture in the brush circle correctly.

rna_TextureSlot_brush_angle_update() is only called after confirming the Angle? shouldnt this be called all the time?

not sure if 35b731c9c8 is related (havent checked further yet)?

Seems like it is actually working behind the scenes (I am getting to correct [rotated] result on the mesh when actually sculpting strokes). But the UI isnt updating the texture in the brush circle correctly. `rna_TextureSlot_brush_angle_update() `is only called after confirming the Angle? shouldnt this be called all the time? not sure if 35b731c9c8 is related (havent checked further yet)?

This issue was referenced by 657806691b

This issue was referenced by 657806691b99f1e6f0f297f273e5ff9c1085564c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

@PabloDobarro : appologies for having missed your actual patch...

@PabloDobarro : appologies for having missed your actual patch...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58438
No description provided.