Fix T58438: wrong display of brush angle rotation preview.

Differential Revision: https://developer.blender.org/D4017